--- a/html/accueil.html
+++ b/html/accueil.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/accueil.css">
+    <title>DRAGONBALLUNIVERS</title>
+    <link rel="stylesheet" href="../css/Accueil.css">
 </head>
+
 <body>
-    <header></header>
-    <div id="home">
-        <h1>LIBRANIM</h1>
-    </div>
+    <header>
+    </header>
+    <section id="first">
+        <a href="">
+            <section id="film" class="vignette">
+                <div class="rectangle">
+                    <h1>FILM</h1>
+                </div>
+            </section>
+        </a>
+        <img src="../media/db-removebg-preview.png" alt="" height="150">
+        <a href="">
+            <section id="manga" class="vignette">
+                <div class="rectangle">
+                    <h1>MANGA</h1>
+                </div>
+            </section>
+        </a>
+        <img src="../media/db-removebg-preview.png" alt="" height="150">
+        <a href="">
+            <section id="jeux" class="vignette">
+                <div class="rectangle">
+                    <h1>JEUX</h1>
+                </div>
+            </section>
+        </a>
+        <img src="../media/db-removebg-preview.png" alt="" height="150">
+        <a href="">
+            <section id="séries" class="vignette">
+                <div class="rectangle">
+                    <h1>SERIES</h1>
+                </div>
+            </section>
+        </a>
 </body>
+
 </html>
