--- a/Inscription-Login.html
+++ b/Inscription-Login.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        
+
     </header>
     <main>
         <div class="col1">
@@ -41,7 +41,7 @@
                     <label for="password">Mot de passe</label><br>
                     <input type="password" name="password" id="" placeholder="mot de passe"><br><br>
                     <label for="confirmpass">Confirmer mot de passe</label><br>
-                    <input type="password" name="confirmpass" id="" placeholder="retaper votre mot de passe">
+                    <input type="password" name="confirmpass" id="" placeholder="retapez votre mot de passe">
                 </div>
             </div>
         </div>
