--- a/css/cgu.html
+++ b/css/cgu.html
@@ -1,30 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> <header></header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cgu</title>
     <link rel="stylesheet" href="cgu.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <!-- <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css"> -->
 </head>
 
 <body>
-    <header>
-        <nav id="nav1">
-            <a href="accueil.html">
-                <img src="../media/db-removebg-preview.png" alt="dbz" width="140" height="140" />
-                <h2 id="titre">DB</h2>
-                <h2 id="tire">UNIVERSE</h2>
-                <!-- <img id="oui" src="../media/baniere.jpg" alt=""> -->
-            </a>
-        </nav>
-        <nav>
-            <img src="../media/header/logo profil (1).png" alt="profil" width="100" height="100" />
-        </nav>
-    
-    </header>
-
 <section class="titre">
 <h1>Conditions Générales d'Utilisation - DB Universe</h1>
 </section>
@@ -60,19 +45,8 @@
         <p>En acceptant ces CGU, vous entrez dans l'univers Dragon Ball en toute connaissance de cause. Que la puissance de ces conditions vous accompagne dans votre exploration de ce monde fantastique !</p>
         <br>
         <p>« Avoir la sagesse pour comprendre et le courage de suivre ces règles, c'est ça être un vrai guerrier Z ! » - Maître Kaio</p>
-   
-</section>
+   </section>
 
-<footer>
-    <h2 class="textefooter"><a href="">FAQ</a>
-        <a href="cgu.html">CGU</a>
-        <a href="">CONTACT</a></h2>
-        <div>
-            <a href="https://discord.gg/x8whU3Tx" target="_blank"><img src="../media/footer/🦆 icon _discord_.png" alt="liens" width="55" height="40"></a>
-            <a href="https://twitter.com/home" target="_blank"><img src="../media/footer/Vector.png" alt="liens" width="50"></a>
-            <a href="https://www.instagram.com/dgbuniverse/" target="_blank"><img id="insta" src="../media/footer/iconoir_instagram.png" alt="liens" width="50" height="50"></a>
-        </div>
-</footer>
-
-</body>
+</body> <footer></footer>
+<script src="../js/header+footer.js"></script>
 </html>
