--- a/html/Boutique.html
+++ b/html/Boutique.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> <header></header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -30,32 +30,12 @@
             </div>
         </div>
 
-        <br><br>
-        <footer>
 
-
-            <h2 class="textefooter"><a href="">FAQ</a>
-                <a href="cgu.html">CGU</a>
-                <a href="">CONTACT</a>
-            </h2>
-            <div>
-                <a href="https://www.facebook.com" target="_blank"><img src="../media/footer/🦆 icon _discord_.png"
-                        alt="liens" width="55" height="40"></a>
-                <img src="../media/footer/Vector.png" alt="liens" width="50">
-                <img id="insta" src="../media/footer/iconoir_instagram.png" alt="liens" width="50" height="50">
-            </div>
-
-
-
-
-
-
-        </footer>
         <script src="../js/header+footer.js "></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
-    </main>
+    </main> <footer></footer>
 </body>
 
 
