--- a/html/header+footer.html
+++ b/html/header+footer.html
@@ -25,7 +25,7 @@
                     <li><a href="">Connexion</a></li>
                     <li><a href="">Inscription</a></li>
                 </ul>
-                <img src="../media/header/logo profil (1).png" alt="profil" width="105" height="105" id="profil" />
+                <img src="../media/pp.png" alt="profil" width="105" height="105" id="profil" />
             </div>
         </div>
 
