--- a/css/FAQ.html
+++ b/css/FAQ.html
@@ -12,12 +12,12 @@
 
 <body>
     <main>
-
+        
         <nav class="titre">
             <h1>FAQ</h1>
         </nav>
         <nav class="paragraphe">
-            <p>N'hésitez pas à nous rejoindre sur nos réseaux en bas de page.
+            <p>Pour toutes questions, n'hésitez pas à nous rejoindre sur nos réseaux en bas de page <br><br>
                 Merci et à bientôt</p>
         </nav>
     </main>
