--- a/css/cgu.html
+++ b/css/cgu.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cgu</title>
     <link rel="stylesheet" href="cgu.css">
-    <!-- <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css"> -->
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 <body>
