--- a/html/FAQ.html
+++ b/html/FAQ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head> <header></header>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <header></header>
     <main>
         
         <nav class="titre">
@@ -21,7 +22,7 @@
                 Merci et à bientôt</p>
         </nav>
     </main>
-
-</body> <footer></footer>
+<footer></footer>
 <script src="../js/header+footer.js"></script>
+</body> 
 </html>
