--- a/html/cgu.html
+++ b/html/cgu.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> <header></header>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cgu</title>
-    <link rel="stylesheet" href="cgu.css">
+    <link rel="stylesheet" href="../css/cgu.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 <body>
+    <header></header>
 <section class="titre">
 <h1>Conditions Générales d'Utilisation - DB Universe</h1>
 </section>
@@ -46,7 +47,7 @@
         <br>
         <p>« Avoir la sagesse pour comprendre et le courage de suivre ces règles, c'est ça être un vrai guerrier Z ! » - Maître Kaio</p>
    </section>
-
-</body> <footer></footer>
+<footer></footer>
 <script src="../js/header+footer.js"></script>
+</body> 
 </html>
