--- a/html/fanArt.html
+++ b/html/fanArt.html
@@ -4,22 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fanArt</title>
+    <link rel="stylesheet" href="../css/fanArt.css">
 </head>
 
 <body>
     <header></header>
-
-
-
-
-
-
-
-
-
-
+    <main>
 
     
+
+
+    </main>
     <footer></footer>
     <script src="../js/header+footer.js"></script>
     <script src="../js/navBar.js"></script>
