--- a/html/Boutique.html
+++ b/html/Boutique.html
@@ -19,8 +19,11 @@
 
 
     <main>
-    <h1 id = "btq">BOUTIQUE</h1>
-   
+    <div class = "titre">
+    <h1 id = "btq">B</h1>
+    <h1 id = "btque">o</h1>
+    <h1 id = "boutique">utique</h1>
+   </div>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">          
                     <div class="card h-100">
@@ -29,7 +32,7 @@
                             alt="..." >
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Figurines</h5>
+                            <h5 class="card-title">Statues/Figurines</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional content. This content is a little bit longer.</p>
                         </div>
