--- a/html/films.html
+++ b/html/films.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/films.css">
 
 </head>
-
+<header></header>
 <body>
     <h1>Films</h1>
 
@@ -17,7 +17,7 @@
     <div class="scene scene--card1" onclick="flip(0)">
         <div class="card">
             <div class="card__face card__face--front bg1">
-                <h1>Dragon Ball : La légende de Shenron</h1>
+                <h6>Dragon Ball : La légende de Shenron</h6>
             </div>
             <div class="card__face card__face--back">
                 <p>Bulma et ses compagnons tentent de récupérer les sept boules de cristal pendant que Sangoku et ses
@@ -57,6 +57,13 @@
 
         </div>
     </div>
+
+    <div class="scene scene--card">
+        <div class="card">
+          <div class="card__face card__face--front">front</div>
+          <div class="card__face card__face--back">back</div>
+        </div>
+      </div>
 
 
 
