--- a/html/header+footer.html
+++ b/html/header+footer.html
@@ -23,8 +23,8 @@
             </div>
             <div>
                 <ul id="menuCo">
-                    <li><a href="">Connexion</a></li>
-                    <li><a href="">Inscription</a></li> 
+                    <li><a href="Inscription-Login.html">Connexion</a></li>
+                    <li><a href="Inscription-Login.html">Inscription</a></li> 
                 </ul>
                 <img src="../media/pp.png" alt="profil" width="105" height="105" id="profil" />
             </div>
