--- a/html/serie.html
+++ b/html/serie.html
@@ -201,6 +201,7 @@
         }
     </script>
     <script src="../js/header+footer.js"></script>
+    <script src="../js/navBar.js"></script>
 </body>
 
 </html>
