--- a/html/Inscription-Login.html
+++ b/html/Inscription-Login.html
@@ -22,9 +22,10 @@
                     <h5 class="card-title">Login</h5>
                     <hr>
                     <label for="pseudo">Pseudo</label><br>
-                    <input type="text" name="pseudo" id="" placeholder="votre pseudo"><br><br>
+                    <input type="text" name="pseudo" id="" placeholder="votre pseudo" required><br><br>
                     <label for="password">Mot de passe</label><br>
-                    <input type="password" name="password" id="" placeholder="password">
+                    <input type="password" name="password" id="" placeholder="password" required><br><br>
+                    <input type="button" value="connexion" required>
                 </div>
             </div>
         </div>
@@ -36,13 +37,14 @@
                     <h5 class="card-title">Inscription</h5>
                     <hr>
                     <label for="pseudo">Pseudo</label><br>
-                    <input type="text" name="pseudo" id="" placeholder="votre pseudo"><br><br>
+                    <input type="text" name="pseudo" id="" placeholder="votre pseudo" required><br><br>
                     <label for="mail">E-Mail</label><br>
-                    <input type="email" name="mail" id="" placeholder="margoulin@gg.com"><br><br>
+                    <input type="email" name="mail" id="" placeholder="margoulin@gg.com" required><br><br>
                     <label for="password">Mot de passe</label><br>
-                    <input type="password" name="password" id="" placeholder="mot de passe"><br><br>
+                    <input type="password" name="password" id="" placeholder="mot de passe" required><br><br>
                     <label for="confirmpass">Confirmer mot de passe</label><br>
-                    <input type="password" name="confirmpass" id="" placeholder="retapez votre mot de passe">
+                    <input type="password" name="confirmpass" id="" placeholder="retapez votre mot de passe" required><br><br>
+                    <input type="submit" value="soumettre" required>
                 </div>
             </div>
         </div>
