modif bouton inscription

--- a/html/Inscription-Login.html
+++ b/html/Inscription-Login.html
@@ -44,7 +44,7 @@
                     <input type="password" name="password" id="" placeholder="mot de passe" required><br><br>
                     <label for="confirmpass">Confirmer mot de passe</label><br>
                     <input type="password" name="confirmpass" id="" placeholder="retapez votre mot de passe" required><br><br>
-                    <input type="submit" value="soumettre" required>
+                    <input type="submit" value="envoyer demande" required>
                 </div>
             </div>
         </div>
