--- a/html/Inscription-Login.html
+++ b/html/Inscription-Login.html
@@ -18,22 +18,22 @@
         
         <div class="col1">
             <div class="card h-100">
-                <div class="card-body">
+                <form class="card-body">
                     <h5 class="card-title">Login</h5>
                     <hr>
                     <label for="pseudo">Pseudo</label><br>
                     <input type="text" name="pseudo" id="" placeholder="votre pseudo" required><br><br>
                     <label for="password">Mot de passe</label><br>
                     <input type="password" name="password" id="" placeholder="password" required><br><br>
-                    <input type="button" value="connexion" required>
-                </div>
+                    <input type="submit" value="connexion">
+                </form>
             </div>
         </div>
 
 
         <div class="col2">
             <div class="card h-100">
-                <div class="card-body">
+                <form class="card-body">
                     <h5 class="card-title">Inscription</h5>
                     <hr>
                     <label for="pseudo">Pseudo</label><br>
@@ -44,8 +44,8 @@
                     <input type="password" name="password" id="" placeholder="mot de passe" required><br><br>
                     <label for="confirmpass">Confirmer mot de passe</label><br>
                     <input type="password" name="confirmpass" id="" placeholder="retapez votre mot de passe" required><br><br>
-                    <input type="submit" value="envoyer demande" required>
-                </div>
+                    <input type="submit" value="envoyer demande">
+                </form>
             </div>
         </div>
     
