--- a/html/Inscription-Login.html
+++ b/html/Inscription-Login.html
@@ -22,10 +22,10 @@
                     <h5 class="card-title">Login</h5>
                     <hr>
                     <label for="pseudo">Pseudo</label><br>
-                    <input type="text" name="pseudo" id="" placeholder="votre pseudo" required><br><br>
+                    <input type="text" name="pseudo" id="pseudoCo" placeholder="votre pseudo" required><br><br>
                     <label for="password">Mot de passe</label><br>
-                    <input type="password" name="password" id="" placeholder="password" required><br><br>
-                    <input type="submit" value="connexion">
+                    <input type="password" name="password" id="pswCo" placeholder="password" required><br><br>
+                    <input type="button" value="connexion" onclick="pshhhhhhhhhwshwsh()">
                 </form>
             </div>
         </div>
@@ -37,14 +37,14 @@
                     <h5 class="card-title">Inscription</h5>
                     <hr>
                     <label for="pseudo">Pseudo</label><br>
-                    <input type="text" name="pseudo" id="" placeholder="votre pseudo" required><br><br>
+                    <input type="text" name="pseudo" id="pseudoInsc" placeholder="votre pseudo" required><br><br>
                     <label for="mail">E-Mail</label><br>
-                    <input type="email" name="mail" id="" placeholder="margoulin@gg.com" required><br><br>
+                    <input type="email" name="mail" id="mailInsc" placeholder="margoulin@gg.com" required><br><br>
                     <label for="password">Mot de passe</label><br>
-                    <input type="password" name="password" id="" placeholder="mot de passe" required><br><br>
+                    <input type="password" name="password" id="pswInsc" placeholder="mot de passe" required><br><br>
                     <label for="confirmpass">Confirmer mot de passe</label><br>
-                    <input type="password" name="confirmpass" id="" placeholder="retapez votre mot de passe" required><br><br>
-                    <input type="submit" value="envoyer demande">
+                    <input type="password" name="confirmpass" id="conPswInsc" placeholder="retapez votre mot de passe" required><br><br>
+                    <input type="submit" value="envoyer demande" onclick="pshhhhhhhhhwshwsh()">
                 </form>
             </div>
         </div>
@@ -60,6 +60,7 @@
         crossorigin="anonymous"></script>
         
     <script src="../js/header+footer.js "></script>
+    <script src="../js/Inscription-Login.js"></script>
 </body>
 
 </html>
