--- a/html/accueil.html
+++ b/html/accueil.html
@@ -15,7 +15,7 @@
     <header></header>
     <main>
         <section id="first">
-            <a href="../html/séries.html">
+            <a href="../html/serie.html">
                 <section id="séries" class="vignette" onmouseover="hoverEffect3()" onmouseout="removeHover3()">
                     <div class="rectangle">
                         <h1 id="texteSeries">SERIES</h1>
