--- a/html/manga.html
+++ b/html/manga.html
@@ -25,8 +25,8 @@
                             <p class="card-text">Le troisième volume de «Super Dragon Ball Heroes : Ultra God
                                 Mission!!!! »</p>
                             <div>
-                                <button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
-                                </button>
+                                <a href="https://www.db-z.com/super-dragon-ball-heroes-chapitre-1-vf/"><button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
+                                </button></a>
                             </div>
                         </div>
                     </div>
@@ -37,8 +37,8 @@
                             <p class="card-text">Le tome 22 du manga Dragon Ball Super a été mis en vente au Japon lundi
                                 4 décembre !</p>
                             <div>
-                                <button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
-                                </button>
+                                <a href="https://www.db-z.com/mangas/dragon-ball-super-manga/"><button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
+                                </button></a>
                             </div>
                         </div>
                     </div>
@@ -48,8 +48,8 @@
                             <h5 class="card-title">SUPER DRAGON BALL HEROES 13th ANNIVERSARY SUPER GUIDE</h5>
                             <p class="card-text">Désormais en vente au Japon </p>
                             <div>
-                                <button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
-                                </button>
+                                <a href="https://www.db-z.com/super-dragon-ball-heroes-13th-anniversary-super-guide-couverture/"><button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
+                                </button></a>
                             </div>
                         </div>
                     </div>
@@ -65,8 +65,8 @@
                             <p class="card-text">Le chapitre 1 de la nouvelle série est là !</p>
 
                             <div>
-                                <button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
-                                </button>
+                               <a href="https://www.db-z.com/super-dragon-ball-heroes-meteor-mission-episode-1/"><button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
+                                </button></a> 
                             </div>
                         </div>
                     </div>
@@ -76,8 +76,8 @@
                             <h5 class="card-title">Super Dragon Ball multiverse</h5>
                             <p class="card-text">Tout se mélange, accrochez vos ceintures !</p>
                             <div>
-                                <button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
-                                </button>
+                              <a href="https://www.dragonball-multiverse.com/fr/read.html"><button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
+                                </button></a>  
                             </div>
                         </div>
                     </div>
@@ -87,8 +87,8 @@
                             <h5 class="card-title">Super Dora Ultrarealistic</h5>
                             <p class="card-text">Les fans l'attendaient, c'est enfin arrivé !</p>
                             <div>
-                                <button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
-                                </button>
+                               <a href="https://www.youtube.com/watch?v=CdkIS-KDaUQ"><button class="btn"><i class="animation"></i>Découvrir<i class="animation"></i>
+                                </button></a> 
                             </div>
                         </div>
                     </div>
