--- a/html/jeux.html
+++ b/html/jeux.html
@@ -20,15 +20,15 @@
             <h1 id=jvideo>O</h1>
         </div>
 
-        <div class="imgprez">
+        <!-- <div class="imgprez">
             <a href="#">
                 <img src="/media/gokuphone.jpg" width="300px" height="300px" alt="smartphone">
                 <img src="/media/gokuplaystation.jpg" width="300px" height="300px" alt="console">
             </a>
-        </div>
+        </div> -->
 
 
-        <!-- JEUX SMARTPHONE -->
+        <!-- JEUX SMARTPHONE (sous titre) -->
 
 
         <div class="sous-titre">
@@ -37,7 +37,7 @@
             <h3 id="soutitre">ne :</h3>
         </div>
 
-                        <!-- DOKKAN -->
+        <!-- DOKKAN -->
 
 
         <div class="dokkan">
@@ -59,11 +59,11 @@
 
             <video src="/media/JeuxVideo/dragon-ball-z-dokkan-battle-trailer.mp4" height="200" width="auto" autoplay
                 controls muted loop></video>
-            <img  class = "screenshots" src="/media/JeuxVideo/ssdokkan.jpg" alt="screendokkan" height="200" width="auto">
-            <img class = "screenshots" src ="/media/JeuxVideo/ssdokkan1.jpg" alt="screendokkan1" height="200" width="auto">
+            <img class="screenshots" src="/media/JeuxVideo/ssdokkan.jpg" alt="screendokkan" height="200" width="auto">
+            <img class="screenshots" src="/media/JeuxVideo/ssdokkan1.jpg" alt="screendokkan1" height="200" width="auto">
         </div>
 
-                            <!-- DB LEGENDS -->
+        <!-- DB LEGENDS -->
 
         <div class="dblegends">
             <div class="card mb-3" style="max-width: 540px;">
@@ -80,18 +80,19 @@
                     </div>
                 </div>
             </div>
-            <video src="/media/JeuxVideo/Dragon Ball Legends Full Animated Trailer!.mp4" height="250" width="auto"
+            <video src="/media/JeuxVideo/Dragon Ball Legends Full Animated Trailer!.mp4" height="200" width="auto"
                 autoplay controls muted loop></video>
-            <img class = "screenshots" src ="/media/JeuxVideo/dblegends1.webp" alt="screendbl" height="300" width="auto">
-            <img class = "screenshots" src="/media/JeuxVideo/dragon-ball-legends-2.jpg.webp" alt="screendbl1" height="300" width="auto">
+            <img class="screenshots" src="/media/JeuxVideo/dblegends1.webp" alt="screendbl" height="200" width="auto">
+            <img class="screenshots" src="/media/JeuxVideo/dblegends2.jpg" alt="screendbl1" height="200" width="auto">
         </div>
 
-                          <!-- DB BUCCHIGIRI -->
+        <!-- DB BUCCHIGIRI -->
 
+        <!-- <div class = "dbbucchigiri">
         <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="/media/bucchigiri.jpg" class="img-fluid rounded-start" alt="...">
+                    <img src="/media/bucchigiri.jpg"  class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -102,7 +103,11 @@
                 </div>
             </div>
         </div>
-
+        <video src="/media/JeuxVideo/dragon-ball-z-bucchigiri-match-trailer-officiel.mp4" height="200" width="auto"
+        autoplay controls muted loop></video>
+            <img class = "screenshots" src ="/media/JeuxVideo/bucchigiri1.jpg" alt="screendbl" height="200" width="auto">
+            <img class = "screenshots" src="/media/JeuxVideo/bucchigiri2.jpg" alt="screendbl1" height="200" width="auto">
+</div> -->
 
         <!-- JEUX CONSOLE -->
 
@@ -114,114 +119,152 @@
             <h3 id="sstitre1">O</h3>
             <h3 id="soustitre1">les :</h3>
         </div>
-                <!-- DB SPARKING ZERO -->
 
 
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="/media/DB-Sparking-ZERO.jpg" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">DRAGON BALL : SPARKING ! ZERO</h5>
-                        <p class="card-text">prévu 2024</p>
-                        <p class="card-text">PC,PS5,Xbox Series</p>
+        <!-- DB SPARKING ZERO -->
+
+
+        <div class="dbsparking">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="/media/JeuxVideo/Dragon-Ball-Sparking-Zero.jpg" class="img-fluid rounded-start"
+                            alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">DRAGON BALL : SPARKING ! ZERO</h5>
+                            <p class="card-text">prévu 2024</p>
+                            <p class="card-text">PC,PS5,Xbox Series</p>
+                        </div>
                     </div>
                 </div>
             </div>
+            <video src="/media/JeuxVideo/DRAGON BALL Sparking! ZERO – Announcement Trailer.mp4" height="200"
+                width="auto" autoplay controls muted loop></video>
+            <img class="screenshots" src="/media/JeuxVideo/daaaaamn.jpg" alt="daaamn" height="200" width="auto">
+            <img class="screenshots" src="/media/JeuxVideo/dbcovid.jpg" alt="dbcovid" height="200" width="auto">
         </div>
 
-                        <!-- DB HEROES -->
+        <!-- DB HEROES -->
 
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="/media/dbheroes.jpg" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">DRAGON BALL HEROES : WORLD MISSION</h5>
-                        <p class="card-text">14 oct. 2022</p>
-                        <p class="card-text">PC,Switch</p>
+
+        <div class="dbheroes">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="/media/dbheroes.jpg" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">DRAGON BALL HEROES : WORLD MISSION</h5>
+                            <p class="card-text">14 oct. 2022</p>
+                            <p class="card-text">PC,Switch</p>
+                        </div>
                     </div>
                 </div>
             </div>
+            <video src="/media/JeuxVideo/Super Dragon Ball Heroes World Mission - Launch Trailer - Nintendo Switch.mp4"
+                height="200" width="auto" autoplay controls muted loop></video>
+            <img class="screenshots" src="/media/JeuxVideo/dbheroes.jpg" alt="screenheroes" height="200" width="auto">
+            <img class="screenshots" src="/media/JeuxVideo/dbheroes2.jpg" alt="screenheroes1" height="200" width="auto">
+
         </div>
 
-                            <!-- DB KAKAROT -->
+        <!-- DB KAKAROT -->
 
-
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="/media/dragonballzkakarot.png" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">DRAGON BALL : Kakarot</h5>
-                        <p class="card-text">17 janv. 2020</p>
-                        <p class="card-text">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+        <div class=dbkakarot>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="/media/dragonballzkakarot.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">DRAGON BALL : Kakarot</h5>
+                            <p class="card-text">17 janv. 2020</p>
+                            <p class="card-text">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+                        </div>
                     </div>
                 </div>
             </div>
+            <video src="/media/JeuxVideo/Dragon Ball Z Kakarot Bande-annonce de lancement PS5, PS4.mp4" height="200"
+                width="auto" autoplay controls muted loop></video>
+            <img class="screenshots" src="/media/JeuxVideo/dbkakarotss.webp" alt="screenkakarot" height="200"
+                width="auto">
+            <img class="screenshots" src="/media/JeuxVideo/dbkakarotss1.jpg" alt="screenkakarot1" height="200"
+                width="auto">
         </div>
+        <!-- DB FIGHTERZ -->
 
-                                <!-- DB FIGHTERZ -->
-
-
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="/media/Dragon_Ball_FighterZ.webp" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">DRAGON BALL FIGHTER Z</h5>
-                        <p class="card-text">26 janv. 2018</p>
-                        <p class="card-text">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+        <div class=dbfighterz>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="/media/Dragon_Ball_FighterZ.webp" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">DRAGON BALL FIGHTER Z</h5>
+                            <p class="card-text">26 janv. 2018</p>
+                            <p class="card-text">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+                        </div>
                     </div>
                 </div>
             </div>
+            <video src="/media/JeuxVideo/DRAGON BALL FighterZ - E3 2017 Trailer XB1, PS4, PC.mp4" height="200"
+                width="auto" autoplay controls muted loop></video>
+            <img class="screenshots" src="/media/JeuxVideo/fighterZ1.jpg" alt="screendfz" height="200" width="auto">
+            <img class="screenshots" src="/media/JeuxVideo/fighterz_10.jpg" alt="screendbfz1" height="200" width="auto">
         </div>
+        <!-- DB XENOVERSE -->
 
-                            <!-- DB XENOVERSE -->
-
-
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="/media/xenoverse2.jpg" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">DRAGON BALL: XENOVERSE 2</h5>
-                        <p class="card-text">28 oct. 2016</p>
-                        <p class="card-text">PC, Switch, PS4, Xbox ONE </p>
+        <div class="dbxenoverse">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="/media/xenoverse2.jpg" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">DRAGON BALL: XENOVERSE 2</h5>
+                            <p class="card-text">28 oct. 2016</p>
+                            <p class="card-text">PC, Switch, PS4, Xbox ONE </p>
+                        </div>
                     </div>
                 </div>
             </div>
+            <video src="/media/JeuxVideo/Dragon Ball XENOVERSE 2 - Announcement Trailer PS4, XB1, PC.mp4" height="200"
+                width="auto" autoplay controls muted loop></video>
+            <img class="screenshots" src="/media/JeuxVideo/xenoversess.jpg" alt="screenxeno" height="200" width="auto">
+            <img class="screenshots" src="/media/JeuxVideo/xenoversess1.png" alt="screenxeno1" height="200"
+                width="auto">
         </div>
 
-                        <!-- DB THE BREAKERS -->
+        <!-- DB THE BREAKERS -->
 
-                        
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="/media/Dragon-ball-the-breakers.webp" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">DRAGON BALL : THE BREAKERS</h5>
-                        <p class="card-text">16 juil. 2015</p>
-                        <p class="card-text">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+        <div class="dbthebreakers">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="/media/Dragon-ball-the-breakers.webp" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">DRAGON BALL : THE BREAKERS</h5>
+                            <p class="card-text">16 juil. 2015</p>
+                            <p class="card-text">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+                        </div>
                     </div>
                 </div>
             </div>
+            <video
+                src="/media/JeuxVideo/Dragon Ball The Breakers - Trailer de la saison 4 & mises à jour 1er anniversaire PS4.mp4"
+                height="200" width="auto" autoplay controls muted loop></video>
+            <img class="screenshots" src="/media/JeuxVideo/thebreakers1.jpg" alt="screendtb" height="200" width="auto">
+            <img class="screenshots" src="/media/JeuxVideo/thebreakersss.jpg" alt="screentb1" height="200" width="auto">
+
         </div>
-
-
 
 
 
