--- a/html/manga.html
+++ b/html/manga.html
@@ -115,39 +115,38 @@
             <li class="member livres">
                 <div class="thumb"><img src="../media/manga/miniature1.png"></div>
                 <div class="description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vitae incidunt, aperiam nisi cupiditate laborum corporis fugiat natus assumenda quam inventore, odit eius excepturi voluptas !<br><a href="https://codepen.io/chriscoyier/">@DragonBallZ</a></p>
+                    <p>Turbo dinguerie, classique parmis les classiques. Le père du shonen moderne.<br><a href="https://www.manga-news.com/index.php/membre/Niero">Niero</a></p>
                 </div>
             </li>
             <li class="member livres">
-                <div class="thumb"><img src="../media/manga/miniature1.png"></div>
+                <div class="thumb"><img src="../media/blue.jpg"></div>
                 <div class="description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vitae incidunt, aperiam nisi cupiditate laborum<br><a href="https://codepen.io/quezo/">@DragonBall</a></p>
+                    <p>Dommage qu'on ne puisse pas mettre 21/20 tant ce manga est ouf ils conquis tout le monde ceux qui crachent dessus nont tout simplement pas vu cette œuvre. Dragon Ball est un manga avec beaucoup de symbolique que beaucoup de personnes ne comprennent pas surtout les plus jeunes qui préfère voir nos héros avec plusieurs couleurs alors qu'il n'ont jamais lu ou vu ne manga/animé du début à la fin et c'est triste<br><a href="https://www.manga-news.com/index.php/serie/avis/Dragon-ball">Mousse32</a></p>
                 </div>
             </li>
             <li class="member livres">
-                <div class="thumb"><img src="../media/manga/miniature1.png"></div>
+                <div class="thumb"><img src="../media/vegeta.jpg"></div>
                 <div class="description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vitae incidunt, aperiam nisi cupiditate laborum corporis fugiat natus assumenda quam inventore, odit eius excepturi voluptas !<br><a href="https://codepen.io/chriscoyier/">@DragonBallZ</a></p>
+                    <p>le légende du manga dans le monde entier.
+
+                        Peut-être pas le meilleur ni le plus vendu mais sûrement le plus important, celui qui à ouvert le monde à cette culture.
+                        
+                        Merci<br><a href="https://www.manga-news.com/index.php/membre/Korom">Korom</a></p>
                 </div>
             </li>
             <li class="member livres">
-                <div class="thumb"><img src="../media/manga/miniature1.png"></div>
+                <div class="thumb"><img src="../media/gohan.webp"></div>
                 <div class="description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vitae incidunt, aperiam nisi cupiditate laborum<br><a href="https://codepen.io/quezo/">@DragonBall</a></p>
+                    <p>Dragon Ball... Toute mon enfance, je lui met 20 car c'est la note que je lui aurais mis plus jeune. Une oeuvre de qualité a possédé si vous ne connaissez pas encore. C'est une des rares séries de mon anciennes collection qui n'est pas parti chez Emmaus ._. et que mon ex n'a pas envoyé chez elle... <br><a href="https://www.manga-news.com/index.php/membre/Terra">Terra</a></p>
                 </div>
             </li>
             <li class="member livres">
-                <div class="thumb"><img src="../media/manga/miniature1.png"></div>
+                <div class="thumb"><img src="../media/krilin.png"></div>
                 <div class="description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vitae incidunt, aperiam nisi cupiditate laborum corporis fugiat natus assumenda quam inventore, odit eius excepturi voluptas !<br><a href="https://codepen.io/chriscoyier/">@DragonBallZ</a></p>
+                    <p>Que dire de ce manga a part qu'il est cultissime et qu'il pour le meilleur manga jamasi crée et je ne pèse pas mes mots, chaque tome et juste un pur chef d'oeuvre, a lire d'urgence si ce n'es tpas deja fait<br><a href="https://codepen.io/chriscoyier/">LeSerieVore</a></p>
                 </div>
             </li>
-            <li class="member livres">
-                <div class="thumb"><img src="../media/manga/miniature1.png"></div>
-                <div class="description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vitae incidunt, aperiam nisi cupiditate laborum<br><a href="https://codepen.io/quezo/">@DragonBall</a></p>
-                </div>
-            </li>
+
         </ul>
     
     <!-- </div> -->
