--- a/html/Inscription-Login.html
+++ b/html/Inscription-Login.html
@@ -25,7 +25,10 @@
                     <input type="text" name="pseudo" id="pseudoCo" placeholder="votre pseudo" required><br><br>
                     <label for="password">Mot de passe</label><br>
                     <input type="password" name="password" id="pswCo" placeholder="password" required><br><br>
-                    <input type="button" value="connexion" onclick="pshhhhhhhhhwshwsh()">
+                    <input type="button" value="connexion" onclick="pshhhhhhhhhwshwsh()"><br>
+                    <div class="kame">
+                        <input type="image" src="../media/kamesenin.webp" alt="" height="150">
+                    </div>
                 </form>
             </div>
         </div>
