--- a/html/films.html
+++ b/html/films.html
@@ -149,7 +149,7 @@
                             <div class="cardM">
                                 <div class="cardM__face cardM__face--front bg6">
 
-                                    <img src="../Media films/maxresdefault.jpg" width="1000"
+                                    <img src="../" width="1000"
                                         height="700">
                                 </div>
                                 <div class="cardM__face cardM__face--back cardM__face--back6">
