--- a/html/OST.html
+++ b/html/OST.html
@@ -20,7 +20,7 @@
             <h2 class="orange" onclick="listAudioChoose('listAudio3')">Dragon Ball GT</h2>
             <h2 class="orange" onclick="listAudioChoose('listAudio4')">Dragon Ball Super</h2>
         </aside>
-
+        <img src="../media/goku-dance.gif" alt="..." height="200">
 
         <article>
 
