--- a/html/header+footer.html
+++ b/html/header+footer.html
@@ -74,6 +74,7 @@
         <h2 class="textefooter"><a href="">FAQ</a>
             <a href="../css/cgu.html">CGU</a>
         </h2>
+        <img src="../media/gifgoku.gif" alt="..." id="gifgoku">
         <div>
             <a href="https://discord.com/invite/Xuu9WUNGQ6" target="_blank"><img src="../media/footer/🦆 icon _discord_.png"
                     alt="liens" width="55" height="40"></a>
@@ -81,6 +82,7 @@
                     width="50" height="40"></a>
             <a href="https://www.instagram.com/dgbuniverse/" target="_blank"><img id="insta"
                     src="../media/footer/images-removebg-preview.png" alt="liens" width="50" height="50"></a>
+                    
         </div>
 
 
