--- a/html/serie.html
+++ b/html/serie.html
@@ -147,7 +147,7 @@
                     <div class="lien"><a href="https://anime-sama.fr/catalogue/dragon-ball-gt/" target="_blank"><img src="../Media serie/gokudbgt2.webp" height="250" alt="lien dragon-ball gt"></a>
 
                     <!-- Trailer -->
-                    <video src="../Media serie/dbgttrailer.mp4" height="350" controls autoplay muted loop
+                    <video src="../Media/Dragon Ball GT - Annihilation trailer.mp4" height="350" controls autoplay muted loop
                         alt="Trailer Dragon ball GT"></video>
                     </div>
 
